[package]
name = "healthcheck"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
const_format = "0.2.30"
reqwest = "0.11.13"
tokio = { version = "1.24.1", features = ["full"] }
